@@ -101,17 +101,26 @@ Function Get-Java-Opts {
 	return $JAVA_OPTS
 }
 
+Function SetModularJDK {
+    $MODULAR_JDK = $false
+    & $JAVA --add-modules java.se -version >$null 2>&1
+    if ($LastExitCode -eq 0){
+        $MODULAR_JDK = $true
+    }
+    return $MODULAR_JDK
+}
+
 Function Get-Default-Modular-Jvm-Options {
 Param(
-   [string[]]$opts
+   [string[]]$opts,
+   [bool]$modularJDK
 
 ) #end param
     if($PRESERVE_JAVA_OPTS -eq 'true') {
         return $null
     }
     $DEFAULT_MODULAR_JVM_OPTIONS = @()
-    & $JAVA --add-modules=java.se -version 2> $nul
-    if ($LASTEXITCODE -eq 0) {
+    if ($modularJDK) {
         if ($opts -ne $null) {
               for($i=0; $i -lt $opts.Count; $i++) {
                   $arg = $opts[$i]
@@ -146,8 +155,9 @@ Param(
 
 
 ) #end param
+  $MODULAR_JDK = SetModularJDK
   $JAVA_OPTS = Get-Java-Opts #takes care of looking at defind settings and/or using env:JAVA_OPTS
-  $DEFAULT_MODULAR_JVM_OPTS = Get-Default-Modular-Jvm-Options -opts $JAVA_OPTS
+  $DEFAULT_MODULAR_JVM_OPTS = Get-Default-Modular-Jvm-Options -opts $JAVA_OPTS -modularJDK $MODULAR_JDK
 
   $PROG_ARGS = @()
   if ($JAVA_OPTS -ne $null){
@@ -167,19 +177,22 @@ Param(
   $PROG_ARGS += "-Djboss.server.config.dir=$global:JBOSS_CONFIG_DIR"
 
   if ($GC_LOG -eq $true){
-    if ($PROG_ARGS -notcontains "-verbose:gc"){
+    $dir = New-Item $JBOSS_LOG_DIR -type directory -ErrorAction SilentlyContinue
+    if ($PROG_ARGS -notmatch "-Xlog:?gc"){
         Rotate-GC-Logs
-		if (-not(Test-Path $JBOSS_LOG_DIR)) {
-			$dir = New-Item $JBOSS_LOG_DIR -type directory -ErrorAction SilentlyContinue
-		}
-        $PROG_ARGS += "-verbose:gc"
-        $PROG_ARGS += "-XX:+PrintGCDetails"
-        $PROG_ARGS += "-XX:+PrintGCDateStamps"
-        $PROG_ARGS += "-XX:+UseGCLogFileRotation"
-        $PROG_ARGS += "-XX:NumberOfGCLogFiles=5"
-        $PROG_ARGS += "-XX:GCLogFileSize=3M"
-        $PROG_ARGS += "-XX:-TraceClassUnloading"
-        $PROG_ARGS += "-Xloggc:$JBOSS_LOG_DIR\gc.log"
+
+        if ($MODULAR_JDK -eq $true)
+        {
+            $PROG_ARGS += "-Xlog:gc*:file=`\`"$JBOSS_LOG_DIR\gc.log`\`":time,uptimemillis:filecount=5,filesize=3M"
+        } else {
+            $PROG_ARGS += "-XX:+PrintGCDetails"
+            $PROG_ARGS += "-XX:+PrintGCDateStamps"
+            $PROG_ARGS += "-XX:+UseGCLogFileRotation"
+            $PROG_ARGS += "-XX:NumberOfGCLogFiles=5"
+            $PROG_ARGS += "-XX:GCLogFileSize=3M"
+            $PROG_ARGS += "-XX:-TraceClassUnloading"
+            $PROG_ARGS += "-Xloggc:$JBOSS_LOG_DIR\gc.log"
+        }
     }
   }
 
@@ -325,19 +338,13 @@ Function Env-Clean-Up {
 }
 
 Function Rotate-GC-Logs {
+	mv -ErrorAction SilentlyContinue $JBOSS_LOG_DIR/gc.log $JBOSS_LOG_DIR/backupgc.log
 	mv -ErrorAction SilentlyContinue $JBOSS_LOG_DIR/gc.log.0 $JBOSS_LOG_DIR/backupgc.log.0
 	mv -ErrorAction SilentlyContinue $JBOSS_LOG_DIR/gc.log.1 $JBOSS_LOG_DIR/backupgc.log.1
 	mv -ErrorAction SilentlyContinue $JBOSS_LOG_DIR/gc.log.2 $JBOSS_LOG_DIR/backupgc.log.2
 	mv -ErrorAction SilentlyContinue $JBOSS_LOG_DIR/gc.log.3 $JBOSS_LOG_DIR/backupgc.log.3
 	mv -ErrorAction SilentlyContinue $JBOSS_LOG_DIR/gc.log.4 $JBOSS_LOG_DIR/backupgc.log.4
 	mv -ErrorAction SilentlyContinue $JBOSS_LOG_DIR/gc.log.*.current $JBOSS_LOG_DIR/backupgc.log.current
-}
-
-Function Check-For-GC-Log {
-	if (GC_LOG){
-		$args = (,'-verbose:gc',"-Xloggc:$JBOSS_LOG_DIR/gc.log","-XX:+PrintGCDetails","-XX:+PrintGCDateStamps","-XX:+UseGCLogFileRotation","-XX:NumberOfGCLogFiles=5","-XX:GCLogFileSize=3M","-XX:-TraceClassUnloading",'-version')
-		$OutputVariable = (&$JAVA $args )  | Out-String
-	}
 }
 
 # Setup JBOSS_HOME
